# src/api/mod.rs
@@ -154,10 +154,6 @@ pub fn routes() -> Vec<Route> {
         contests::teams::get_teams,
         contests::teams::post_team,
         contests::teams::delete_team,
-        contests::questions::get_question,
-        contests::questions::get_questions,
-        contests::questions::post_question,
-        contests::questions::delete_question,
         contests::submissions::get_submission,
         contests::submissions::get_submissions,
         contests::submissions::post_submission,
